multi-cloud-deployment/deploy-aws/fabric-ca-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: fabric-ca
  namespace: fabric-ca
spec:
  type: ClusterIP
  ports:
  - port: 7054
    targetPort: 7054
  selector:
    app: fabric-ca
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabric-ca
  namespace: fabric-ca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabric-ca
  template:
    metadata:
      labels:
        app: fabric-ca
    spec:
      containers:
      - name: fabric-ca
        image: hyperledger/fabric-ca:1.4.9
        ports:
        - containerPort: 7054
        - containerPort: 9443
        volumeMounts:
          - mountPath: /etc/hyperledger/fabric-ca-server
            name: fabric-ca-server-pvc
          - name: fabric-ca-server-config-yaml
            mountPath: /etc/hyperledger/fabric-ca-server/fabric-ca-server-config.yaml
            subPath: fabric-ca-server-config.yaml
      volumes:
      - configMap:
          name: fabric-ca-server-config
        name: fabric-ca-server-config-yaml
      - persistentVolumeClaim:
          claimName: fabric-ca-pvc
        name: fabric-ca-server-pvc
