multi-cloud-deployment/deploy-aws/fabric-orderer-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: fabric-orderer4
spec:
  type: ClusterIP
  ports:
  - port: 7050
    name: port-7050
    targetPort: 7050
  - port: 8443
    name: port-8443
    targetPort: 8443
  selector:
    app: fabric-orderer4
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabric-orderer4
  namespace: fabric-orderer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabric-orderer4
  template:
    metadata:
      labels:
        app: fabric-orderer4
    spec:
      containers:
      - name: fabric-orderer4
        image: hyperledger/fabric-orderer:2.2.1
        ports:
        - containerPort: 7050
        - containerPort: 8443
        volumeMounts:
          # - name: cm-configtx-yaml
          #   mountPath: /etc/hyperledger/fabric/configtx.yaml
          #   subPath: configtx.yaml
          - name: system-genesis-block
            mountPath: /var/hyperledger/orderer/orderer.genesis.block
            subPath: orderer.genesis.block
          - name: fabric-orderer4-pvc
            mountPath: /var/hyperledger/production
            subPath: production
          - name: orderer4-crypto
            mountPath: /var/hyperledger/orderer/crypto-material
            subPath: crypto-material

      volumes:
      - configMap:
          name: system-genesis-block
        name: system-genesis-block
      - secret:
          secretName: orderer4-crypto
        name: orderer4-crypto
      - persistentVolumeClaim:
          claimName: fabric-orderer4
        name: fabric-orderer4-pvc
