multi-cloud-deployment/deploy-aws/fabric-peer-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: fabric-peer1
spec:
  type: ClusterIP
  ports:
  - port: 7051
    name: port-7051
    targetPort: 7051
  - port: 9443
    name: port-9443
    targetPort: 9443
  selector:
    app: fabric-peer1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabric-peer1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabric-peer1
  template:
    metadata:
      labels:
        app: fabric-peer1
    spec:
      containers:
      - name: fabric-peer1
        image: hyperledger/fabric-peer:2.2.1
        ports:
        - containerPort: 7051
        - containerPort: 7052
        - containerPort: 9443
        volumeMounts:
          # - name: cm-configtx-yaml
          #   mountPath: /etc/hyperledger/fabric/configtx.yaml
          #   subPath: configtx.yaml
          - name: sampleorganchors
            mountPath: /etc/hyperledger/fabric/channel-artifacts/sampleorganchors.tx
            subPath: sampleorganchors.tx
          - name: utilityemissionchannel
            mountPath: /etc/hyperledger/fabric/channel-artifacts/utilityemissionchannel.tx
            subPath: utilityemissionchannel.tx
          - name: fabric-peer1-pvc
            mountPath: /var/hyperledger/production
            subPath: production
          - name: fabric-peer1-pvc
            mountPath: /opt/gopath/src/github.com/hyperledger/fabric/peer
            subPath: peer
          - name: fabric-peer1-pvc
            mountPath: /etc/hyperledger/fabric/crypto-material
            subPath: crypto-material

      - name: couchdb
        image: hyperledger/fabric-couchdb:0.4
        ports:
          - containerPort: 5984
          - containerPort: 4369
          - containerPort: 9100
        volumeMounts:
          - mountPath: /opt/couchdb/data
            name: fabric-peer1-pvc
            subPath: couchdb-data

      volumes:
      - configMap:
          name: sampleorganchors
        name: sampleorganchorsanchors
      - configMap:
          name: utilityemissionchannel
        name: utilityemissionchannel
      - secret:
          secretName: peer1-crypto
        name: peer1-crypto
      - persistentVolumeClaim:
          claimName: fabric-peer1
        name: fabric-peer1-pvc
